# phonebox

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  compare_g2p.py  compare_g2p_all.py  compare_g2p_sweep.py  config.example.yaml  dump_units.py  eval_accuracy.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_full_eval.sh  run_g2p_experiments.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml
docs/: ACCURACY.md  ARCHITECTURE.md  BENCHMARKS.md  BUNDLING.md  DATA.md  DEPLOYMENT.md  DICT_VERSION_SCHEMA.md  G2P_COMPARE.md  G2P_COMPARE_BASELINE.md  G2P_COMPARE_NO_JOINS.md  G2P_EVAL.md  G2P_SWEEP.md  G2P_UNITS.md  NBEST_QUICKREF.md  NBEST_USAGE.md  PERFORMANCE_AND_SCORING.md  VERSIONING_EXAMPLES.md
docs/experiments/: README.md  RESULTS.md  it_IT.md  pt_BR.md
docs/experiments/results/: it_IT_baseline.json  it_IT_collapse_open.json  it_IT_spelling_gated.json  manifest.json  pt_BR_baseline.json  pt_BR_citation_expand.json  pt_BR_do_du.json  pt_BR_surface_final.json
examples/: library_usage.py  nbest_example.py  score_dictionary.py  score_pronunciation.py  simple_api.py  train_pocketsphinx_g2p.sh  training_example.py
phonebox/: __init__.py  bundler.py  config_builder.py  config_loader.py  constants.py  converter.py  dictionary.py  locales.py  normalize.py  runner.py
phonebox/cart/: __init__.py  g2p_predict.py
phonebox/cli/: __init__.py  main.py
phonebox/cli/commands/: __init__.py  _common.py  align.py  bundle.py  check.py  compare.py  dict.py  model.py  normalize.py  pronounce.py  recipe.py  suggest_joins.py  train.py  train_multigram.py  vectorize.py
phonebox/config/locales/: norm.xlit
phonebox/config/locales/de_DE/: config.json  defaults.json  g2p.xlit
phonebox/config/locales/default/: config.json  defaults.json  g2p.xlit
phonebox/config/locales/en_IN/: config.json  defaults.json
phonebox/config/locales/en_US/: config.json  defaults.json  g2p.xlit
phonebox/config/locales/es_MX/: config.json  defaults.json  g2p.xlit
phonebox/config/locales/fr_FR/: config.json  defaults.json  g2p.xlit
phonebox/config/locales/it_IT/: config.json  defaults.json  g2p.xlit
phonebox/config/locales/pt_BR/: config.json  defaults.json  g2p.xlit
phonebox/configs/: __init__.py  accurate.yaml  defaults.yaml  fast.yaml  pocketsphinx.yaml  xsampa.yaml
phonebox/core/: __init__.py  decision_tree.py  em_align.py  g2p_model.py  joint_decode.py  multigram_align.py  multigram_g2p.py  multigram_lm.py  nbest.py  vectorizer.py
phonebox/eval/: __init__.py  g2p_compare.py  g2p_compare_all.py
phonebox/experiments/: __init__.py  analysis.py  equiv.py  metrics.py  normalize.py  split.py
phonebox/tools/: __init__.py  count_diphones.py
phonebox/utils/: __init__.py  icu_utils.py  io.py  logging_config.py
scripts/: bundle_for_deployment.sh  find_suspicious.py  score_prons.py  train_narrow.py
tests/: __init__.py  test_cli.py  test_decision_tree.py  test_dict_processing.py  test_dictionary.py  test_edge_cases.py  test_experiment_normalize.py  test_g2p_api.py  test_integration.py  test_it_IT_locale.py  test_joint_decode.py  test_multigram_align.py  test_multigram_g2p.py  test_multigram_lm.py  test_nbest.py  test_no_config_joins.py  test_pocketsphinx.py  test_runner.py  test_vectorizer.py
